Adding download resume option

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 							<li><a href="#skills"><b>Skills</b></a></li>
 							<li><a href="#education"><b>Education</b></a></li>
                             <li><a href="#employment"><b>Previous Employment</b></a></li>
+                            <li><a href="pkarandikar.github.io/Resume_Prajakta_Karandikar.pdf"><b>Download Resume</b></a></li>
                             <li><a href="#connect"><b>Let's Connect!</b></a></li>
 						</ul>
 					</nav>
