--- a/index.html
+++ b/index.html
@@ -183,52 +183,52 @@ Developed a Desktop application to be used by doctors to store and maintain pati
                                 
                                     <div class="row">
                                         <article>
-                                            <header style="font-size: 20px; text-align: center;">
+                                            <header style="font-size: 20px; text-align:left; margin-left:7px">
                                                 <h3><b>Advanced</b></h3>
                                             </header>
                                             <ul style="list-style-type: disc;">
-                                                <li>Java, C#, Python </li>
-                                                <li>HTML, JSP</li>
-                                                <li>CSS, Materialize CSS</li>
-                                                <li>JavaScript,JQuery</li>
-                                                <li>SQL, PHP</li>
+                                                <li style="text-align:left">Java, C#, Python </li>
+                                                <li style="text-align:left">HTML, JSP</li>
+                                                <li style="text-align:left">CSS, Materialize CSS</li>
+                                                <li style="text-align:left">JavaScript,JQuery</li>
+                                                <li style="text-align:left">SQL, PHP</li>
 
                                             </ul>
                                         </article>
                                         <article>
-                                            <header style="font-size: 20px; text-align: left;">
+                                            <header style="font-size: 20px; text-align: left; margin-left:17px">
                                                 <h3><b>Languages</b></h3>
                                             </header>
                                             <ul style="list-style-type: disc;">
-                                                <li> C, C++, Swift</li>
+                                                <li style="text-align:left"> C, C++, Swift</li>
                                             </ul>
                                         </article>
                                         <article>
-                                            <header style="font-size: 20px; text-align: left;">
+                                            <header style="font-size: 20px; text-align: left; margin-left:28px">
                                                 <h3><b>Databases</b></h3>
                                             </header>
                                             <ul style="list-style-type: disc;">
-                                                <li>MySQL</li>
-                                                <li>Oracle</li>
-                                                <li>AWS DynamoDB</li>
+                                                <li style="text-align:left">MySQL</li>
+                                                <li style="text-align:left">Oracle</li>
+                                                <li style="text-align:left">AWS DynamoDB</li>
                                             </ul>
                                         </article>
                                         <article>
-                                            <header style="font-size: 20px; text-align: left;">
+                                            <header style="font-size: 20px; text-align: left; margin-left:38px">
                                                 <h3><b>FrameWork</b></h3>
                                             </header>
                                             <ul style="list-style-type: disc;">
-                                                <li>.NET</li>
+                                                <li style="text-align:left">.NET</li>
                                             </ul>
                                         </article>
                                         <article>
-                                            <header style="font-size: 20px; text-align: left;">
+                                            <header style="font-size: 20px; text-align: left; margin-left:49px">
                                                 <h3><b>Other</b></h3>
                                             </header>
                                             <ul style="list-style-type: disc;">
-                                                <li>User Experience Design </li>
-                                                <li>Network Protocols & AWS</li>
-                                                <li>Google Charts</li>
+                                                <li style="text-align:left">User Experience Design </li>
+                                                <li style="text-align:left">Network Protocols & AWS</li>
+                                                <li style="text-align:left">Google Charts</li>
 
                                             </ul>
                                         </article>
