--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                         <p>
                                             (Jan 2017 – May 2017)<br>
                                             Project description
-                                            Scanner, Parser, Semantic Analyser, AST generator, Code Generator for a new language with given grammer.
+                                            Scanner, Parser, Semantic Analyser, AST generator, Code Generator for a new language with given grammar.
                                             <br><b>TECHS USED:</b>Java 8, ASM (java bytecode manipulation framework)
                                             Additional software TBA
                                         </p>
