--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 											<h2><b>About Me</b></h2>
 										</header>
 										<p><b> <a href="https://mammacare.org/" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
-   onmouseover='this.style.color="#946FBE"'>Computer Science Graduate student. Software Development intern at MammaCare. Strong project-work and course-work background in software development/ web development. Actively seeking an internship position in Software Development for Fall 2017.</a></b></p>
+   onmouseover='this.style.color="#946FBE"'>Computer Science Graduate student. Software Development intern at MammaCare. Strong project-work and course-work background in software development/ web development. Actively seeking a full-time position in Software Development for 2018.</a></b></p>
 										<ul class="actions">
 											<li><a href="https://www.linkedin.com/in/prajakta-rkarandikar/" class="button" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
                                                                     onmouseover='this.style.color="#946FBE"'>Learn More</a></li>
