--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     <li>
 
                                         <h3><b>Compiler for a new given language with given grammar</b></h3>
-                                        <p><a href="https://github.com/pkarandikar/ProjectsOverTheYears/tree/master/Compiler-for-a-new-given-language-with-given-grammer" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
+                                        <p><a href="https://github.com/pkarandikar/" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
    onmouseover='this.style.color="#946FBE"'>
     (Jan 2017 – May 2017)<br>
     Project description
@@ -96,7 +96,7 @@
                                     <li>
 
                                         <h3><b>Finger Print Minutiae enhancement and recognition system</b></h3>
-                                        <p><a href="https://github.com/pkarandikar/ProjectsOverTheYears/tree/master/Fingerprint_Minutiae_enhancement-recognition%20_system" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
+                                        <p><a href="https://github.com/pkarandikar/" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
    onmouseover='this.style.color="#946FBE"'>
     (Jan 2017 – May 2017)<br>
     Project description
@@ -109,7 +109,7 @@
                                     <li>
 
                                         <h3><b>HashTag Counter</b></h3>
-                                        <p><a href="https://github.com/pkarandikar/ProjectsOverTheYears/tree/master/Fibonacci_Heap_Implementation" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
+                                        <p><a href="https://github.com/pkarandikar/" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
    onmouseover='this.style.color="#946FBE"'>
     (Oct 2016 – Dec 2016)<br>
     Project description
@@ -122,7 +122,7 @@
                                     <li>
 
                                         <h3><b>MIPSSimulator</b></h3>
-                                        <p><a href="https://github.com/pkarandikar/ProjectsOverTheYears/tree/master/MIPSSimulator" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
+                                        <p><a href="https://github.com/pkarandikar/" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
    onmouseover='this.style.color="#946FBE"'>
     (Aug 2016 – Dec 2016)<br>
     Project description
@@ -133,7 +133,7 @@
                                     <li>
 
                                         <h3><b>MacGray Windows webapp, android application</b></h3>
-                                        <p><a href="https://github.com/pkarandikar/ProjectsOverTheYears/tree/master/MacGray-WebApp_%26_AndroidApp" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
+                                        <p><a href="https://github.com/pkarandikar/" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
    onmouseover='this.style.color="#946FBE"'>
     (Jan 2016 – Jun 2016)<br>
     Project description
@@ -145,7 +145,7 @@
                                     <li>
 
                                         <h3><b>Online poll application ‘PollUp’</b></h3>
-                                        <p><a href="https://github.com/pkarandikar/ProjectsOverTheYears/tree/master/PollUp-Online_poll_application" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
+                                        <p><a href="https://github.com/pkarandikar/" style="text-decoration: none !important; border-bottom:none" onmouseout='this.style.color="black"'
    onmouseover='this.style.color="#946FBE"'>
     (Jan 2015 – Jun 2015)<br>
     Project description
@@ -179,7 +179,7 @@ Developed a Desktop application to be used by doctors to store and maintain pati
 								</ul>
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="https://github.com/pkarandikar/ProjectsOverTheYears" class="button">Learn More</a></li>
+										<li><a href="https://github.com/pkarandikar/" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
